--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  google_fonts: ^6.1.0
   provider: ^6.1.1
   supabase: ^1.11.11
   supabase_flutter: ^1.10.25
