--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^4.0.4
+  iconify_flutter: ^0.0.5
   provider: ^6.1.1
   supabase: ^0.3.6
   url_launcher: ^6.2.1
