--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^4.0.4
   iconify_flutter: ^0.0.5
+  liquid_pull_to_refresh: ^3.0.1
   provider: ^6.1.1
   snapshot: ^0.2.5
   supabase: ^0.3.6
